--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
         enter: "연예",
         sports: "스포츠"
       },
-      page_id = location.hash.replace("#", ""),
       $cnt_wrap = $('#cnt').children().eq(0);
 // End [변수 선언]
 
@@ -151,7 +150,7 @@
       var data = Object.keys(user_cate)[i],
           data_name = user_cate[Object.keys(user_cate)[i]];
 
-      $depth_1.append("<li id="data" class='swiper-slide'><a href='#'>" + data_name + "</a></li>");
+      $depth_1.append("<li id="+data+" class='swiper-slide'><a href='#'>"+data_name+"</a></li>");
 
     }
 
@@ -174,9 +173,9 @@
       var page_hash = location.hash;
 
       if(page_hash == "") {
-        $("#home");
+        return $("#home");
       } else {
-        $(page_hash);
+        return $(page_hash);
       }
   }
 
@@ -199,7 +198,7 @@
     });
 
     cate_load();
-    $('body').attr('id', 'pid_'+page_id);
+    $('body').attr('id', 'pid_'+location.hash.replace("#", ""));
     page_open_load();
   });
 
