--- a/index.html
+++ b/index.html
@@ -143,15 +143,14 @@
 // Start [1depth 메뉴 로드 ->> cate_load()]
   var cate_load = function() {
 
-    var $depth_1 = $('#nav_1 .swiper-wrapper'),
+    var $nav_1 = $('#nav_1 .swiper-wrapper'),
         cate_length = Object.keys(user_cate).length;
 
     for (var i = 0; i < cate_length; i++) {
       var data = Object.keys(user_cate)[i],
           data_name = user_cate[Object.keys(user_cate)[i]];
 
-      $depth_1.append("<li id="+data+" class='swiper-slide'><a href='#'>"+data_name+"</a></li>");
-
+      $nav_1.append("<li id="+data+" class='swiper-slide'><a href='#'>"+data_name+"</a></li>");
     }
 
     var depth_1 = new Swiper('.depth_1', {
@@ -225,10 +224,10 @@
         $next_el = $cnt_el.eq(2),
         $prev_el = $cnt_el.eq(0);
 
-    if(prev 이동) {
+    if($prev_el.hasClass('swiper-slide-active')) {
       $next_el.load("./cnt/"+ $prev_el.attr('class') + ".html");
       $cnt_wrap.prepend($next_el);
-    } else if (next 이동) {
+    } else if ($next_el.hasClass('swiper-slide-active')) {
       $cnt_el.eq(2).load("./cnt/"+ $next_el.attr('class') + ".html");
       $cnt_wrap.append($cnt_el.eq(0));
     }
@@ -247,18 +246,6 @@
       freeMode: false,
       on: {
         slideChangeTransitionEnd: function () {
-          var cnt_el = $('.cnt_slider .cnt_el');
-
-          if ( cnt_el.eq(0).hasClass('swiper-slide-active')) {
-              cnt_slider.removeSlide(2);
-              cnt_el.eq(0).before('<div class="swiper-slide swiper-slide-prev"><div id="prev_page"></div></div>');
-          } else if(cnt_el.eq(2).hasClass('swiper-slide-active')) {
-              cnt_slider.removeSlide(0);
-              cnt_el.eq(2).after('<div class="swiper-slide swiper-slide-next"><div id="next_page"></div></div>');
-          }
-
-          $('.swiper-slide-active > div').attr('id','active_page');
-          page_load();
         },
       }
     });
