--- a/index.html
+++ b/index.html
@@ -136,15 +136,23 @@
         enter: "연예",
         sports: "스포츠"
       },
-      $cnt_wrap = $('#cnt').children().eq(0);
+      start_page_id = function() {
+        var page_hash = location.hash;
+
+        if(page_hash == "") {
+          return "home"
+        } else {
+          return page_hash.replace('#','')
+        }
+      },
+      $cnt_wrap = $('#cnt').children().eq(0),
+      $nav_1 = $('#nav_1 .swiper-wrapper'),
+      cate_length = Object.keys(user_cate).length;
 // End [변수 선언]
 
 
 // Start [1depth 메뉴 로드 ->> cate_load()]
   var cate_load = function() {
-
-    var $nav_1 = $('#nav_1 .swiper-wrapper'),
-        cate_length = Object.keys(user_cate).length;
 
     for (var i = 0; i < cate_length; i++) {
       var data = Object.keys(user_cate)[i],
@@ -168,25 +176,38 @@
   }
 // << End "1depth 메뉴"
 
-  var this_el_catch = function (){
-      var page_hash = location.hash;
 
-      if(page_hash == "") {
-        return $("#home");
-      } else {
-        return $(page_hash);
-      }
+  var page_id = function() {
+    $nav_1.children('.on').attr('id');
   }
 
-  var page_open_load = function () {
-    var this_el = this_el_catch(),
-        next_el = this_el.next(),
-        prev_el = this_el.prev();
+  var next_el_id = function() {
+    var $next_el = $nav_1.children('.on').next();
+    if($next_el){
+      $next_el.attr('id');
+    } else {
+      $nav_1.children().first().attr('id');
+    }
+  }
 
-    $("#active_page").load("./cnt/"+ this_el.attr('id') + ".html");
+  var prev_el_id = function() {
+    var $prev_el = $nav_1.children('.on').prev();
+    if($prev_el){
+      $prev_el.attr('id');
+    } else {
+      $nav_1.children().last().attr('id');
+    }
+  }
+
+
+  var page_load = function() {
+    var $active_el = $('#'+page_id),
+        $next_el = $('#'+next_el_id).next(),
+        $prev_el = $('#'+prev_el_id).prev();
+
+    $("#active_page").load("./cnt/"+ start_page_id + ".html");
     $("#prev_page").load("./cnt/"+ prev_el.attr('id') + ".html");
     $("#next_page").load("./cnt/"+ next_el.attr('id') + ".html");
-    this_el.addClass('on');
   }
 
 
@@ -197,8 +218,9 @@
     });
 
     cate_load();
-    $('body').attr('id', 'pid_'+location.hash.replace("#", ""));
-    page_open_load();
+    $('body').attr('id', 'pid_'+start_page_id);
+    $('#'+start_page_id).addClass('on')
+    page_load();
   });
 
 
@@ -220,21 +242,21 @@
 // "컨텐츠 슬라이더" START >>
   var cnt_move = function () {
     var $cnt_el = $cnt_wrap.children(),
-        $this_el = $cnt_el.eq(1),
+        $active_el = $cnt_el.eq(1),
         $next_el = $cnt_el.eq(2),
         $prev_el = $cnt_el.eq(0);
 
     if($prev_el.hasClass('swiper-slide-active')) {
-      $next_el.load("./cnt/"+ $prev_el.attr('class') + ".html");
+      $next_el.load();
       $cnt_wrap.prepend($next_el);
     } else if ($next_el.hasClass('swiper-slide-active')) {
       $cnt_el.eq(2).load("./cnt/"+ $next_el.attr('class') + ".html");
-      $cnt_wrap.append($cnt_el.eq(0));
+      $cnt_wrap.append($prev_el);
     }
 
-    $cnt_wrap.children().eq(0).attr('class', 'cnt_el swiper-slide swiper-slide-prev');
-    $cnt_wrap.children().eq(1).attr('class', 'cnt_el swiper-slide swiper-slide-active');
-    $cnt_wrap.children().eq(2).attr('class', 'cnt_el swiper-slide swiper-slide-next');
+    $prev_el.children().eq(0).attr('class', 'cnt_el swiper-slide swiper-slide-prev');
+    $active_el.attr('class', 'cnt_el swiper-slide swiper-slide-active');
+    $next_el.attr('class', 'cnt_el swiper-slide swiper-slide-next');
   }
 
     var cnt_slider = new Swiper('.cnt_slider', {
