--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
     var page_hash = location.hash;
 
     if(page_hash == "") {
-      return "home"
+      return "home";
     } else {
-      return page_hash.replace('#','')
+      return page_hash.replace('#','');
     }
   }
-  
+
   var cate_load = function() {
 
     for (var i = 0; i < cate_length; i++) {
@@ -205,13 +205,13 @@
   var page_load = function(direction) {
     var $el = $('#'+direction+'_page');
 
-    if(direction === 'prev') {
+    if(direction == 'prev') {
       $el.load("./cnt/"+ prev_el_id + ".html");
       $el.parent().attr('data-id',prev_el_id);
-    } else if (direction === 'next') {
+    } else if (direction == 'next') {
       $el.load("./cnt/"+ next_el_id + ".html");
       $el.parent().attr('data-id',next_el_id);
-    } else if (direction === 'acitve'){
+    } else if (direction == 'acitve'){
       $el.load("./cnt/"+ page_id + ".html");
       $el.parent().attr('data-id',page_id);
     } else {
@@ -220,7 +220,7 @@
   }
 
   var nav_1_reset_on = function() {
-    var active_id = $cnt_wrap.children('.swiper-slide-active').attr('data-id'),
+    var active_id = $cnt_wrap.children('.swiper-slide-active').attr('data-id');
 
     $nav_1.children().removeClass('on');
     $nav_1.children('#'+active_id).addClass('on');
@@ -233,11 +233,11 @@
     });
 
     cate_load();
-    $('body').attr('id', 'pid_'+start_page_id);
-    $('#'+start_page_id).addClass('on')
-    page_load(active);
-    page_load(next);
-    page_load(prev);
+    $('body').attr('id', 'pid_'+ start_page_id());
+    $('#'+start_page_id()).addClass('on')
+    page_load('active');
+    page_load('next');
+    page_load('prev');
   });
 
 
