--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
       freeMode: false,
       on: {
         slideChangeTransitionEnd: function () {
-          cnt_move();
-          nav_1_reset_on();
+          // cnt_move();
+          // nav_1_reset_on();
         },
       }
     });
