--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
       autoHeight: true,
       on: {
         slideChangeTransitionEnd: function () {
-          // cnt_move();
-          // nav_1_reset_on();
+          cnt_move();
+          nav_1_reset_on();
         },
       }
     });
