--- a/index.html
+++ b/index.html
@@ -138,11 +138,21 @@
       },
       $cnt_wrap = $('#cnt').children().eq(0),
       $nav_1 = $('#nav_1 .swiper-wrapper'),
-      cate_length = Object.keys(user_cate).length;
+      cate_length = Object.keys(user_cate).length,
+      $body = $('body');
 // End [변수 선언]
 
 
 // Start [1depth 메뉴 로드 ->> cate_load()]
+  var cate_index = function (key_value) {
+    for (var i = 0; i < cate_length; i++) {
+      var data = Object.keys(user_cate)[i];
+
+      if( key_value == data ) {
+        return i
+      }
+    }
+  }
 
   var start_page_id = function() {
     var page_hash = location.hash;
@@ -179,52 +189,48 @@
 // << End "1depth 메뉴"
 
 
-  var page_id = function() {
-    return $nav_1.children('.on').attr('id');
-  }
-
-  var next_el_id = function() {
-    var $next_el = $nav_1.children('.on').next();
-    if($next_el){
-      return $next_el.attr('id');
-    } else {
-      return $nav_1.children().first().attr('id');
-    }
-  }
-
-  var prev_el_id = function() {
-    var $prev_el = $nav_1.children('.on').prev();
-    if($prev_el){
-      return $prev_el.attr('id');
-    } else {
-      return $nav_1.children().last().attr('id');
-    }
-  }
-
-
   var page_load = function(direction) {
     var $el = $('#'+direction+'_page'),
-        prev_id = prev_el_id(),
-        active_id = page_id(),
-        next_id = next_el_id();
+        $active_el = $cnt_wrap.children('.on'),
+        active_id = $active_el.attr('data-id'),
+        active_num = cate_index(active_id),
+        prev_num = active_num - 1,
+        next_num = active_num + 1,
+        prev_id = Object.keys(user_cate)[prev_num],
+        next_id = Object.keys(user_cate)[next_num];
 
-    if(direction == 'prev') {
+    if (active_num = 0){
+      var prev_num = cate_length - 1,
+          prev_id = Object.keys(user_cate)[prev_num],
+          next_id = Object.keys(user_cate)[next_num],
+          $active_el = $cnt_wrap.children('.on'),
+          active_id = $active_el.attr('data-id');
+    } else if(active_num = cate_length) {
+      var next_num =  0,
+          prev_id = Object.keys(user_cate)[prev_num],
+          next_id = Object.keys(user_cate)[next_num],
+          $active_el = $cnt_wrap.children('.on'),
+          active_id = $active_el.attr('data-id');
+    }
+
+    if (direction == 'prev') {
+      $active_el.removeClass('on').prev().addClass('on');
       $el.load("./cnt/"+ prev_id + ".html");
       $el.parent().attr('data-id',prev_id);
     } else if (direction == 'next') {
+      $active_el.removeClass('on').next().addClass('on');
       $el.load("./cnt/"+ next_id + ".html");
       $el.parent().attr('data-id',next_id);
-    } else {
+    } else if (direction == 'active'){
+      $active_el.addClass('on');
       $el.load("./cnt/"+ active_id + ".html");
-      $el.parent().attr('data-id',active_id).attr('class','swiper-slide swiper-slide-active on');
+      $el.parent().attr('data-id',active_id);
+    } else {
+      $('#active_page').load("./cnt/"+ active_id + ".html");
+      $('#next_page').load("./cnt/"+ next_id + ".html");
+      $('#prev_page').load("./cnt/"+ prev_id + ".html");
     }
-  }
-
-  var nav_1_reset_on = function() {
-    var active_id = $cnt_wrap.children('.on').attr('data-id');
-
-    $nav_1.children().removeClass('on');
-    $nav_1.children('#'+active_id).addClass('on');
+    $body.attr('id', 'pid_'+ active_id);
   }
 
   $(function() {
@@ -234,11 +240,9 @@
     });
 
     cate_load();
-    $('body').attr('id', 'pid_'+ start_page_id());
+    $body.attr('id', 'pid_'+ start_page_id());
     $('#'+start_page_id()).addClass('on')
-    page_load('active');
-    page_load('next');
-    page_load('prev');
+    page_load();
   });
 
 
@@ -258,36 +262,21 @@
 
 
 // "컨텐츠 슬라이더" START >>
-  var cnt_move = function () {
-    var $cnt_el = $cnt_wrap.children(),
-        $active_el = $cnt_el.eq(1),
-        $next_el = $cnt_el.eq(2),
-        $prev_el = $cnt_el.eq(0);
+  var cnt_slider = new Swiper('.cnt_slider', {
+    slidesPerView: 1,
+    spaceBetween: 0,
+    initialSlide: 1,
+    autoHeight: true
+  });
+  cnt_slider.on('slidePrevTransitionEnd', function () {
+    console.log('slidePrevTransitionEnd');
+    page_load('prev');
+  });
 
-    if($prev_el.hasClass('on')) {
-      page_load('prev');
-      $cnt_wrap.prepend($next_el);
-    } else if ($next_el.hasClass('on')) {
-      page_load('next');
-      $cnt_wrap.append($prev_el);
-    }
-
-    $prev_el.attr('class', 'swiper-slide swiper-slide-prev');
-    $active_el.attr('class', 'swiper-slide swiper-slide-active on');
-    $next_el.attr('class', 'swiper-slide swiper-slide-next');
-  }
-
-    var cnt_slider = new Swiper('.cnt_slider', {
-      slidesPerView: 1,
-      spaceBetween: 0,
-      autoHeight: true,
-      on: {
-        slideChangeTransitionEnd: function () {
-          cnt_move();
-          nav_1_reset_on();
-        },
-      }
-    });
+  cnt_slider.on('slideNextTransitionEnd', function () {
+    console.log('slideNextTransitionEnd');
+    page_load('next');
+  });
 // << END "컨텐츠 슬라이더"
   </script>
 </body>
