--- a/index.html
+++ b/index.html
@@ -97,15 +97,9 @@
 
   <div id="cnt" class="cnt_slider swiper-container">
     <div class="swiper-wrapper">
-      <div class="swiper-slide">
-        <div id="prev_page"></div>
-      </div>
-      <div class="swiper-slide">
-        <div id="active_page"></div>
-      </div>
-      <div class="swiper-slide">
-        <div id="next_page"></div>
-      </div>
+      <div class="swiper-slide"></div>
+      <div class="swiper-slide"></div>
+      <div class="swiper-slide"></div>
     </div>
   </div>
   <footer>
