--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
     $('#'+start_page_id()).addClass('on');
     $body.attr('id', 'pid_'+ start_page_id());
 
-    var page_id = $body.attr('id').replace('pid_',''),
+    var page_id = start_page_id(),
         cate_num = cate_index(page_id)[0],
         prev_id = Object.keys(user_cate)[cate_num-1],
         active_id = Object.keys(user_cate)[cate_num],
         next_id = Object.keys(user_cate)[cate_num+1];
 
     $cnt_list.eq(1).load("./cnt/"+ start_page_id() + ".html");
-    $cnt_list.eq(0).load("./cnt/"+ pprev_id + ".html");
+    $cnt_list.eq(0).load("./cnt/"+ prev_id + ".html");
     $cnt_list.eq(2).load("./cnt/"+ next_id + ".html");
   });
 
