--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         next_id =  Object.keys(user_cate)[chk_append_id(page_id,0)[2]];
 
     $('#'+page_id).removeClass('on').prev().addClass('on');
-    cnt_slider.prependSlide("<div data-id="+prev_id+" class='swiper-slide swiper-slide-next'></div>");
+    cnt_slider.prependSlide("<div data-id="+prev_id+" class='swiper-slide'></div>");
     $cnt_list.eq(0).load("./cnt/"+ prev_id + ".html");
     cnt_slider.removeSlide(3);
     $body.attr('id','pid_'+active_id);
@@ -258,7 +258,7 @@
         next_id =  Object.keys(user_cate)[chk_append_id(page_id,0)[2]];
 
     $('#'+page_id).removeClass('on').next().addClass('on');
-    cnt_slider.appendSlide("<div data-id="+next_id+" class='swiper-slide swiper-slide-next'></div>");
+    cnt_slider.appendSlide("<div data-id="+next_id+" class='swiper-slide'></div>");
     $cnt_list.eq(0).load("./cnt/"+ next_id + ".html");
     cnt_slider.removeSlide(0);
     $body.attr('id','pid_'+active_id);
