--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
         active_id = Object.keys(user_cate)[cate_num],
         next_id = Object.keys(user_cate)[cate_num+1];
 
-    $cnt_list.eq(1).load("./cnt/"+ start_page_id() + ".html");
-    $cnt_list.eq(0).load("./cnt/"+ prev_id + ".html");
-    $cnt_list.eq(2).load("./cnt/"+ next_id + ".html");
+    $cnt_list.eq(1).attr('data-id',prev_id).load("./cnt/"+ start_page_id() + ".html");
+    $cnt_list.eq(0).attr('data-id',active_id).load("./cnt/"+ prev_id + ".html");
+    $cnt_list.eq(2).attr('data-id',next_id).load("./cnt/"+ next_id + ".html");
   });
 
 
