--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       var data = Object.keys(user_cate)[i];
 
       if(key_value == data && i == 0) {
-        return [cate_length, i, i+1];
+        return [cate_length-1, i, i+1];
       } else if (key_value == data && i == cate_length-1) {
         return [i-1, i, 0];
       } else if (key_value == data) {
