--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   var start_page_id = function() {
     var page_hash = location.hash;
 
-    if(page_hash == "") {
+    if(page_hash == "" && page_hash == "#null" && page_hash == 'undefiend') {
       return "home";
     } else {
       return page_hash.replace('#','');
@@ -186,8 +186,6 @@
 
 
   $(function() {
-
-
     $("#btn_menu").click(function() {
       $(this).toggleClass('on');
       $("#mypage").toggleClass('on');
