--- a/index.html
+++ b/index.html
@@ -119,47 +119,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./res/js/swiper.min.js" charset="utf-8"></script>
   <script>
-  var start_page_id = function() {
-    var page_hash = location.hash;
-
-    if(page_hash == "" && page_hash == "#null" && page_hash == 'undefiend' && page_hash == '#') {
-      return "home";
-    } else {
-      return page_hash.replace('#','');
-    }
-  }
-
-  var cate_index = function (key_value) {
-    for (var i = 0; i < cate_length; i++) {
-      var data = Object.keys(user_cate)[i];
-
-      if(key_value == data && i == 0) {
-        return [cate_length-1, i, i+1];
-      } else if (key_value == data && i == cate_length-1) {
-        return [i-1, i, 0];
-      } else if (key_value == data) {
-        return [i-1, i, i+1];
-      }
-    }
-  }
-
-  var chk_append_index = function (key_value,direction_num) {
-    var el_num1 = cate_index(key_value)[direction_num],
-        el_id1 = Object.keys(user_cate)[el_num1];
-
-    return cate_index(el_id1);
-  }
-
-  var cate_load = function() {
-
-    for (var i = 0; i < cate_length; i++) {
-      var data = Object.keys(user_cate)[i],
-          data_name = user_cate[Object.keys(user_cate)[i]];
-
-      $nav_1.append("<li id="+data+" class='swiper-slide'><a href='#'>"+data_name+"</a></li>");
-    }
-    depth_1.update();
-  }
 
 // Start [Global 변수 선언]
   var user_cate = {
@@ -183,6 +142,7 @@
       next_id = Object.keys(user_cate)[cate_num+1];
 // End [변수 선언]
 
+
   $(function() {
     $("#btn_menu").click(function() {
       $(this).toggleClass('on');
@@ -197,6 +157,8 @@
     $cnt_list.eq(2).attr('data-id',next_id).load("./cnt/"+ next_id + ".html");
   });
 
+
+
   var depth_1 = new Swiper('.depth_1', {
     slidesPerView: 'auto',
     spaceBetween: 0,
@@ -208,6 +170,8 @@
     },
     freeMode: true
   });
+
+
 
 // 서브메뉴 슬라이더
     var depth_2 = new Swiper('.depth_2', {
@@ -222,6 +186,7 @@
       freeMode: true
     });
 // 서브메뉴 슬라이더 끝
+
 
 // "컨텐츠 슬라이더" START >>
   var cnt_slider = new Swiper('.cnt_slider', {
@@ -258,6 +223,48 @@
     depth_1.slideNext();
   });
 // << END "컨텐츠 슬라이더"
+
+
+  function tart_page_id() {
+    var page_hash = location.hash;
+
+    if(page_hash == "" && page_hash == "#null" && page_hash == 'undefiend' && page_hash == '#') {
+      return "home";
+    } else {
+      return page_hash.replace('#','');
+    }
+  }
+
+  function cate_index(key_value) {
+    for (var i = 0; i < cate_length; i++) {
+      var data = Object.keys(user_cate)[i];
+
+      if(key_value == data && i == 0) {
+        return [cate_length-1, i, i+1];
+      } else if (key_value == data && i == cate_length-1) {
+        return [i-1, i, 0];
+      } else if (key_value == data) {
+        return [i-1, i, i+1];
+      }
+    }
+  }
+
+  function chk_append_index(key_value,direction_num) {
+    var el_num1 = cate_index(key_value)[direction_num],
+        el_id1 = Object.keys(user_cate)[el_num1];
+
+    return cate_index(el_id1);
+  }
+
+  function cate_load() {
+    for (var i = 0; i < cate_length; i++) {
+      var data = Object.keys(user_cate)[i],
+          data_name = user_cate[Object.keys(user_cate)[i]];
+
+      $nav_1.append("<li id="+data+" class='swiper-slide'><a href='#'>"+data_name+"</a></li>");
+    }
+    depth_1.update();
+  }
   </script>
 </body>
 
