--- a/index.html
+++ b/index.html
@@ -118,7 +118,49 @@
   <!-- <script src="./res/js/jquery-3.5.0.slim.min.js" charset="utf-8"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./res/js/swiper.min.js" charset="utf-8"></script>
-  <script>
+  <script type="text/javascript">
+  function tart_page_id() {
+    var page_hash = location.hash;
+
+    if(page_hash == "" && page_hash == "#null" && page_hash == 'undefiend' && page_hash == '#') {
+      return "home";
+    } else {
+      return page_hash.replace('#','');
+    }
+  }
+
+  function cate_index(key_value) {
+    for (var i = 0; i < cate_length; i++) {
+      var data = Object.keys(user_cate)[i];
+
+      if(key_value == data && i == 0) {
+        return [cate_length-1, i, i+1];
+      } else if (key_value == data && i == cate_length-1) {
+        return [i-1, i, 0];
+      } else if (key_value == data) {
+        return [i-1, i, i+1];
+      }
+    }
+  }
+
+  function chk_append_index(key_value,direction_num) {
+    var el_num1 = cate_index(key_value)[direction_num],
+        el_id1 = Object.keys(user_cate)[el_num1];
+
+    return cate_index(el_id1);
+  }
+
+  function cate_load() {
+    for (var i = 0; i < cate_length; i++) {
+      var data = Object.keys(user_cate)[i],
+          data_name = user_cate[Object.keys(user_cate)[i]];
+
+      $nav_1.append("<li id="+data+" class='swiper-slide'><a href='#'>"+data_name+"</a></li>");
+    }
+    depth_1.update();
+  }
+  </script>
+  <script type="text/javascript">
 
 // Start [Global 변수 선언]
   var user_cate = {
@@ -224,48 +266,6 @@
     depth_1.slideNext();
   });
 // << END "컨텐츠 슬라이더"
-
-
-  function tart_page_id() {
-    var page_hash = location.hash;
-
-    if(page_hash == "" && page_hash == "#null" && page_hash == 'undefiend' && page_hash == '#') {
-      return "home";
-    } else {
-      return page_hash.replace('#','');
-    }
-  }
-
-  function cate_index(key_value) {
-    for (var i = 0; i < cate_length; i++) {
-      var data = Object.keys(user_cate)[i];
-
-      if(key_value == data && i == 0) {
-        return [cate_length-1, i, i+1];
-      } else if (key_value == data && i == cate_length-1) {
-        return [i-1, i, 0];
-      } else if (key_value == data) {
-        return [i-1, i, i+1];
-      }
-    }
-  }
-
-  function chk_append_index(key_value,direction_num) {
-    var el_num1 = cate_index(key_value)[direction_num],
-        el_id1 = Object.keys(user_cate)[el_num1];
-
-    return cate_index(el_id1);
-  }
-
-  function cate_load() {
-    for (var i = 0; i < cate_length; i++) {
-      var data = Object.keys(user_cate)[i],
-          data_name = user_cate[Object.keys(user_cate)[i]];
-
-      $nav_1.append("<li id="+data+" class='swiper-slide'><a href='#'>"+data_name+"</a></li>");
-    }
-    depth_1.update();
-  }
   </script>
 </body>
 
