--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./res/js/swiper.min.js" charset="utf-8"></script>
   <script type="text/javascript">
-  function tart_page_id() {
+  function start_page_id() {
     var page_hash = location.hash;
 
     if(page_hash == "" && page_hash == "#null" && page_hash == 'undefiend' && page_hash == '#') {
@@ -159,6 +159,8 @@
     }
     depth_1.update();
   }
+  </script>
+  <script type="text/javascript">
 
 // Start [Global 변수 선언]
   var user_cate = {
