--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   function start_page_id() {
     var page_hash = location.hash;
 
-    if(page_hash == "" && page_hash == "#null" && page_hash == 'undefiend' && page_hash == '#') {
+    if(page_hash == "" && page_hash == "null" && page_hash == 'undefiend') {
       return "home";
     } else {
       return page_hash.replace('#','');
@@ -161,7 +161,6 @@
   }
   </script>
   <script type="text/javascript">
-
 // Start [Global 변수 선언]
   var user_cate = {
         game: "게임",
