--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   function start_page_id() {
     var page_hash = location.hash;
 
-    if(page_hash == "" && page_hash == "#null" && page_hash == '#undefiend' page_hash == '#') {
+    if(page_hash == "" && page_hash == "#null" && page_hash == '#undefiend' && page_hash == '#') {
       return "home";
     } else {
       return page_hash.replace('#','');
