--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     }
   }
 
-  function cate_index(key_value) {
+  var cate_index = function(key_value)  {
     for (var i = 0; i < cate_length; i++) {
       var data = Object.keys(user_cate)[i];
 
@@ -143,7 +143,7 @@
     }
   }
 
-  function chk_append_index(key_value,direction_num) {
+  var chk_append_index = function(key_value,direction_num) {
     var el_num1 = cate_index(key_value)[direction_num],
         el_id1 = Object.keys(user_cate)[el_num1];
 
