--- a/index.html
+++ b/index.html
@@ -140,9 +140,8 @@
   var start_page_id= function() {
     var page_hash = location.hash;
 
-    if(page_hash == "" && page_hash == "#null" && page_hash == '#undefiend' && page_hash == '#') {
-      console.log('home');
-      // return "home";
+    if(page_hash == "" || page_hash == "#null" || page_hash == '#undefiend' || page_hash == '#') {
+      return "home";
     } else {
       return page_hash.replace('#','');
     }
