--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
       $nav_1.append("<li id="+data+" class='swiper-slide'><a href='#'>"+data_name+"</a></li>");
     }
     depth_1.update();
+    depth_1.slideTo(cate_index(start_page_id())[1]);
   }
 
   $(function() {
